force-app/main/default/objects/sfcraft_LogConfig__mdt/sfcraft_LogConfig__mdt.object-meta.xml
<CustomObject>
    <label>SfCraft Log Config</label>
    <pluralLabel>SfCraft Log Configs</pluralLabel>
</CustomObject>