force-app/main/default/objects/sfcraft_LogConfig__mdt/fields/sfcraft_DetailsField__c.field-meta.xml
<CustomField>
    <fullName>sfcraft_DetailsField__c</fullName>
    <description>A field to store various details like stacktrace. Must be long text</description>
    <label>Details Field</label>
    <metadataRelationshipControllingField>sfcraft_LogConfig__mdt.sfcraft_LogObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>sfcraft Log Configs details</relationshipLabel>
    <relationshipName>sfcraft_LogConfigsDetails</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>