force-app/main/default/objects/sfcraft_LogConfig__mdt/fields/sfcraft_IsActive__c.field-meta.xml
<CustomField>
    <fullName>sfcraft_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the config is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>