force-app/main/default/objects/sfcraft_LogConfig__mdt/fields/sfcraft_LogObject__c.field-meta.xml
<CustomField>
    <fullName>sfcraft_LogObject__c</fullName>
    <description>Stores name of the log object</description>
    <label>Log Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>sfcraft_LogConfigs</relationshipLabel>
    <relationshipName>sfcraft_LogConfigs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>