force-app/main/default/objects/sfcraft_LogConfig__mdt/fields/sfcraft_MessageField__c.field-meta.xml
<CustomField>
    <fullName>sfcraft_MessageField__c</fullName>
    <description>Field to store short messages. Must be 255 chars long</description>
    <label>Message Field</label>
    <metadataRelationshipControllingField>sfcraft_LogConfig__mdt.sfcraft_LogObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SfCraft_Log_Configs message</relationshipLabel>
    <relationshipName>sfcraft_LogConfigsMessage</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>