force-app/main/default/objects/sfcraft_LogConfig__mdt/fields/sfcraft_ScopeField__c.field-meta.xml
<CustomField>
    <fullName>sfcraft_ScopeField__c</fullName>
    <description>Field to store scope, e.g. class + method. Must be text</description>
    <label>Scope Field</label>
    <metadataRelationshipControllingField>sfcraft_LogConfig__mdt.sfcraft_LogObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SfCraft_Log_Configs Scope</relationshipLabel>
    <relationshipName>sfcraft_LogConfigsScope</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>