force-app/main/default/objects/sfcraft_LogConfig__mdt/fields/sfcraft_SeverityField__c.field-meta.xml
<CustomField>
    <fullName>sfcraft_SeverityField__c</fullName>
    <description>Field to store severity. Must be text</description>
    <label>Severity Field</label>
    <metadataRelationshipControllingField>sfcraft_LogConfig__mdt.sfcraft_LogObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SfCraft_Log_Configs Severity</relationshipLabel>
    <relationshipName>sfcraft_LogConfigsSeverity</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>