force-app/main/default/objects/sfcraft_LogConfig__mdt/fields/sfcraft_SourceField__c.field-meta.xml
<CustomField>
    <fullName>sfcraft_SourceField__c</fullName>
    <description>Field to store source, e.g. class name + method name. Must be text</description>
    <label>Source Field</label>
    <metadataRelationshipControllingField>sfcraft_LogConfig__mdt.sfcraft_LogObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SfCraft_Log_Configs Source</relationshipLabel>
    <relationshipName>sfcraft_LogConfigsSource</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>